--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -194,25 +194,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Numeric operators\n",
+    "\n",
+    "| Operator | Statement |\n",
+    "| --- | --- |\n",
+    "| Math operations | `1+3` , `5-2` , `10/5`, `2*4` |\n",
+    "| Exponent | `2**3` |\n",
+    "| String -> integer/float | `int(\"24\")` |\n",
+    "| Reminder | `10%3` |\n",
+    "| Max, min & sum | `max(lst)`, `min(lst)`, `sum(lst)` |\n",
+    "| Absolute | `abs(-3)` |\n",
+    "| Round | `round(3.2153, 1)` |\n",
+    "| Floor Division | `12//6` |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The Hacking risk score\n",
+    "\n",
+    "You are building a cybersecurity tool to calculate the \"Hacker Risk Score\" of your company based on the hacking attacks history. Each hacking activity is assigned a score, and you need to calculate the total risk score. Use different numeric operators to perform calculations.\n",
+    "\n",
+    "Create variables for the following hacking activities:\n",
+    "\n",
+    "social_engineering: 12 Score of a successful social engineering attack.  \n",
+    "brute_force: 90 (Score for a successful brute force attack.)  \n",
+    "malware: 105.2 (Score for creating and spreading malware.)  \n",
+    "phishing: 42 (Score for a successful phishing attack.)  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "Calculate the total hacker score using the variables and the appropriate numeric operators. Perform the following calculations:\n",
+    "1. Add the scores of social_engineering and brute_force in a new variable `social_brute`.\n",
+    "2. Divide `social_engineering` by 2 in a new variable `social_engineering_minored`\n",
+    "2. Raise the integer to the power of 0.5 (use the exponent operator **) in a new variable `social_brute_exp`.\n",
+    "3. Multiply the malware score by 1.5 in the variable `malware_coef`\n",
+    "4. Add the scores of `phishing`, `social_engineering_minored`, `malware_coef`, and `social_brute_exp` in the new variable `hacker_score`.\n",
+    "5. Overwrite the total `hacker_score` rounding the result to two decimal places.\n",
+    "6. Print hacker_score along with a message \"The Hacker score of my company is --> `hacker_score`\" indicating the calculated score.\n",
+    "\n",
+    "RESULT SHOULD BE = 220.29"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Initial scores here ⬇️\n",
+    "\n",
+    "\n",
+    "# Calculations here ⬇️\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 String operators\n",
+    "\n",
+    "| Operator | Statement |\n",
+    "| --- | --- |\n",
+    "| Integer/float to string | `str(31.2)` |\n",
+    "| Length of a string | `len(\"Number of characters\")` |\n",
+    "| Concatenate strings | `\"This\" + \" is\" + \" concatenation.\"` |\n",
+    "| Escape characters | `\"\\\"Hello,\\\" she said.\"` |\n",
+    "| Upper, Lower, Title cases | `\"My NaMe iS aLiCIa\".lower()` |\n",
+    "| String to list | `\"Welcome to the dark side\".split()` |\n",
+    "| Split string by | `\"This;is;a;string\".split(\";\")` |\n",
+    "| List to string | `\" \".join([\"Hello\", \"World\"])` |\n",
+    "| New line and tabulator | `\"First line\\n Second line\"` |\n",
+    "| Check substring | `\"a\" in \"This is a test\"` |\n",
+    "| Check only letters | `\"abcdefghijklmn\".isalpha()` |\n",
+    "| Multiply strings | `\"Three\"*3` |\n",
+    "| Replace string | `\"Thiz iz a ztring\".replace(\"z\", \"s\")` |\n",
+    "| Strip text | `\"   Hi   \".strip()` |\n",
+    "| Find index | `\"This is a string\".find(\"s\")` |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Suspect analysis\n",
+    "\n",
+    "Suspect letter: \n",
+    "\"I am a lone figure against modern society. My actions are a response to the industrial-technological system that dehumanizes us. Society's blind pursuit of progress must end. My bombings are my message, a plea for a return to a simpler existence.\"\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Using the Unabomber's text as a string, perform the following operations:\n",
+    "\n",
+    "- Count the total number of characters in the text and store it in a new variable `n_characters`\n",
+    "- Lowercase all the suspect letter and store it as `letter_lowered`\n",
+    "- Replace the symbols [.,-'] of `letter_lowered` and store the new text in the variable `letter_clean`\n",
+    "- Check if `letter_clean` is a string with only letters and save the result in `letter_is_alpha`.\n",
+    "- Check if `letter_clean` contains the word \"message\" and save the result in `letter_has_message`\n",
+    "- Get the list of the words splitting the string `letter_clean` text by spaces in the variable `words`.\n",
+    "- Count The number of words usning the function `len` and store the number of words in the varaible `n_words`.\n",
+    "\n",
+    "Print the results of each operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suspect_letter = \"I am a lone figure against modern society. My actions are a response to the industrial-technological system that dehumanizes us. Society's blind pursuit of progress must end. My bombings are my message, a plea for a return to a simpler existence.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Number of characters in the text ⬇️\n",
+    "\n",
+    "# Lowercase all the suspect letter ⬇️\n",
+    "\n",
+    "# Replace the symbols [.,-'] ⬇️\n",
+    "\n",
+    "# Check if `letter_clean` is a string with only letters ⬇️\n",
+    "\n",
+    "# Check if `letter_clean` contains the word \"message\" ⬇️\n",
+    "\n",
+    "# Get the list of the words splitting the string `letter_clean` ⬇️\n",
+    "\n",
+    "# Count The number of words usning the function `len` ⬇️"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print a final message summarizing the analysis.\n",
+    "\n",
+    "message = \"The number of characters of the message is X. The number of words counted are X. The result of the word \"message\" in the text is: X\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Print the final analysis"
+   ]
   }
  ],
  "metadata": {
