update: new exercises

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -281,20 +281,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Suspect analysis\n",
+    "#### Suspect analysis (String Operators)\n",
+    "\n",
+    "As an agent of the Defense Intelligence Agency, you've been tasked with processing a letter received from a suspect. Use various string operators to analyze and manipulate data.\n",
     "\n",
     "Suspect letter: \n",
     "\"I am a lone figure against modern society. My actions are a response to the industrial-technological system that dehumanizes us. Society's blind pursuit of progress must end. My bombings are my message, a plea for a return to a simpler existence.\"\n",
     "\n",
     "---\n",
     "\n",
-    "Using the Unabomber's text as a string, perform the following operations:\n",
+    "Using the letter's text as a string, perform the following operations:\n",
     "\n",
-    "- Count the total number of characters in the text and store it in a new variable `n_characters`\n",
-    "- Lowercase all the suspect letter and store it as `letter_lowered`\n",
-    "- Replace the symbols [.,-'] of `letter_lowered` and store the new text in the variable `letter_clean`\n",
+    "- Count the total number of characters in the text and store it in a new variable `n_characters`.\n",
+    "- Lowercase all the suspect letter and store it as `letter_lowered`.\n",
+    "- Replace the symbols [.,-'] of `letter_lowered` and store the new text in the variable `letter_clean`.\n",
     "- Check if `letter_clean` is a string with only letters and save the result in `letter_is_alpha`.\n",
-    "- Check if `letter_clean` contains the word \"message\" and save the result in `letter_has_message`\n",
+    "- Check if `letter_clean` contains the word \"message\" and save the result in `letter_has_message`.\n",
     "- Get the list of the words splitting the string `letter_clean` text by spaces in the variable `words`.\n",
     "- Count The number of words usning the function `len` and store the number of words in the varaible `n_words`.\n",
     "\n",
@@ -342,11 +344,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the final analysis ⬇️\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 List operators\n",
+    "\n",
+    "| Operator | Statement |\n",
+    "| --- | --- |\n",
+    "| Element at index | `lst[2]` |\n",
+    "| Get last element | `lst[-1]` |\n",
+    "| Modify item | `lst[1] = 'x'` |\n",
+    "| Add item at the end | `lst.append('a')` |\n",
+    "| Slicing a list | `lst[1:3]` |\n",
+    "| Order a list | `sorted(lst)` |\n",
+    "| List length | `len(lst)` |\n",
+    "| List from range | `list(range(1, 5))` |\n",
+    "| Reverse a list | `lst.reverse()` |\n",
+    "| Remove item | `lst.remove(5)` |\n",
+    "| Count item | `lst.count('#')` |\n",
+    "| Entwine lists | `zip(lst_a, lst_b)` |\n",
+    "| Enumerate list | `enumerate(lst)` |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The New Videogame (Lists Operators)\n",
+    "\n",
+    "You're developing a video game and need to manage the player's inventory using Python lists. \n",
+    "\n",
+    "inventory = sword, shield, ammo, health potion, key, armor, ammo\n",
+    "\n",
+    "\n",
+    "Use the list operators to perform the following operations:\n",
+    "\n",
+    "1. Retrieve, and print the item at index 3, and the last item from the inventory list, and add them to `inventory_pick`.\n",
+    "2. Replace the item `key` with a new item named `gold`.\n",
+    "3. Add a `local map` to the end of the inventory list.\n",
+    "4. Slice the inventory list to get all items from index 2 to 4 and store them in the variable `inventory_slice`.\n",
+    "5. Sort the inventory list in alphabetical order and save it in a new variable `inventory_sort`.\n",
+    "6. Calculate the total number of items in the inventory and save it in the varaible `n_inventory`.\n",
+    "7. Create a new inventory list containing items from 1 to 4 using the list(range()) operator.\n",
+    "8. Reverse the order of items in the inventory list and save it in `inventory_reversed`.\n",
+    "9. Remove the item `armor` from the inventory list.\n",
+    "10. Count the number of `ammo` items in the inventory.\n",
+    "11. Combine the inventory list, with a list of numbers from 1 to the number of items in the list, using list(range()) and zip() operator.\n",
+    "\n",
+    "Print the resulting list after each operation to observe the changes in the inventory as you perform different actions in the game."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print the final analysis"
+    "inventory = ['sword', 'shield', 'ammo', 'health potion', 'key', 'armor', 'ammo']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 Dictionary operators\n",
+    "\n",
+    "| Operator | Statement |\n",
+    "| --- | --- |\n",
+    "| Add key | `dct['new_key'] = True` |\n",
+    "| Add multiple keys | `dct.update({'key1' = 1, 'key2' = False})` |\n",
+    "| Overwrite value | `dct['key'] = False` |\n",
+    "| Extract value | `dct['new_key']` |\n",
+    "| Delete key and value | `del dct['key_to_delete']` |\n",
+    "| Keys & values list | `dct.keys()`, `dct.values()`, `dct.items()` |\n",
+    "| Check key | `\"key\" in market_value` |\n",
+    "| Pair lists to dict | `dict(zip(dct_1, dct_2))` |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Managing Inventory (Dictionary Operators)\n",
+    "\n",
+    "You are the manager of an online gadget store, and you need to manage your inventory using dictionaries. Here's a cool exercise to practice different dictionary operators:\n",
+    "\n",
+    "1. Start with an empty inventory dictionary `gadgets_inventory`.\n",
+    "\n",
+    "2. Add three new gadgets to your inventory using the \"Add key\" operator:\n",
+    "   - Add a gadget named \"Smartphone\" with a quantity of 50.\n",
+    "   - Add a gadget named \"Headphones\" with a quantity of 100.\n",
+    "   - Add a gadget named \"Tablet\" with a quantity of 25.\n",
+    "\n",
+    "3. Update the inventory using the \"Add multiple keys\" operator:\n",
+    "   - Update the inventory by adding \"Laptop\" with a quantity of 75 and \"Smartwatch\" with a quantity of 30.\n",
+    "\n",
+    "4. Oops, it turns out the quantity of Smartphones is incorrect. Use the \"Overwrite value\" operator to set the quantity of Smartphones to 60.\n",
+    "\n",
+    "5. You need to know how many Tablets are in stock. Use the \"Extract value\" operator to retrieve the quantity of Tablets from the inventory.\n",
+    "\n",
+    "6. You've decided to stop selling headphones. Use the \"Delete key and value\" operator to remove \"Headphones\" from the inventory.\n",
+    "\n",
+    "7. Check if you have \"Laptop\" in your inventory using the \"Check key\" operator.\n",
+    "\n",
+    "8. You've received a new shipment of gadgets, but the delivery list is in two separate lists: gadget names and quantities. Use the \"Pair lists to dict\" operator to create a dictionary for the new gadgets: `new_gadgets = ['Camera', 'Smart Scale', 'Fitness Tracker']` and `new_quantities = [10, 15, 20]`.\n",
+    "\n",
+    "Finally, print the updated `gadgets_inventory` dictionary after completing all the operations. This exercise will help you practice using different dictionary operators to efficiently manage your store's inventory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start coding here ⬇️"
    ]
   }
  ],
