update: if statements

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -468,6 +468,124 @@
    "source": [
     "# Start coding here ⬇️"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## If, elif, else statements"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The scuba Diving Registration check\n",
+    "\n",
+    "You are developing a scuba diving website, and you need to implement a registration check script. Users must meet certain criteria to register successfully. \n",
+    "\n",
+    "Ask the user using input() function the following parameters:\n",
+    "- Age\n",
+    "- Name\n",
+    "- Email\n",
+    "\n",
+    "Below are the conditions:\n",
+    "- Users must be at least 18 years old to register.\n",
+    "- Users must provide name with more than 2 letters and email with \"@\" symbol in the string to complete the registration.\n",
+    "\n",
+    "Print out the following messages:\n",
+    "- If the user is not 18 years old, print `Sorry, you must be at least 18 years old to register.`\n",
+    "- If the user is 18 or older but has not a valid name or email, print `Please provide a valid name and email to complete the registration.`\n",
+    "- If the user is at least 18 years old and has provided both their name and email, print `User registration successful!`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ask user input here ⬇️\n",
+    "\n",
+    "\n",
+    "# Start your code here ⬇️"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The police department program\n",
+    "\n",
+    "You're working on a police department program to verify if provided identification numbers (DNI) are valid, and if they are in the police black list database.\n",
+    "\n",
+    "- Write an input() function: Begin by using the input() function to prompt the user to enter an identification number (DNI).\n",
+    "\n",
+    "In a nested if-else satement check the following conditions:\n",
+    "- Check if the length of the input is exactly 10 characters. An DNI typically consists of 8 digits, a hyphen, and a single character. If not print \"Length missmatch\".\n",
+    "- Check the format: Ensure that the first 8 characters are digits (0-9), and the ninth character is a hyphen ('-'), and verify that the last character is a letter (A-Z) or (a-z). If not print \"Invalid format\".\n",
+    "\n",
+    "If is not a valid ID for one of this conditions:\n",
+    "- Print the string: \"The DNI X is not a valid ID.\"\n",
+    "\n",
+    "> Tip: To check multiple multiple Ifs conditions you can add a variable `valid = True` outside the statments, and if the condition **is not meet** you change the check variable to `False`\n",
+    "\n",
+    "Finally if the DNI is valid check if the DNI is in the black list database. If it is in the black list, print the alert message:\n",
+    "\n",
+    "```pyton\n",
+    "[ALERT] The individual {NAME} with {DNI} is on the Blacklist database.  Immediate action and reporting are required.\n",
+    "```\n",
+    "\n",
+    "If is not in the database print:\n",
+    "```pyton\n",
+    "[CLEAR] The DNI is not on the list. No further action is required at this time.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "black_list = {\n",
+    "    \"Juan Varas\": \"65941354-A\",\n",
+    "    \"María López\": \"98765432-Z\",\n",
+    "    \"Carlos García\": \"56789012-M\",\n",
+    "    \"Ana Rodríguez\": \"34567890-Y\",\n",
+    "    \"Luis Urbión\": \"13508940-X\",\n",
+    "    \"Sofía Fernández\": \"51849732-B\",\n",
+    "    \"Pedro González\": \"60684930-C\",\n",
+    "    \"Elena Torres\": \"91736482-D\",\n",
+    "    \"Javier Bravo\": \"08566074-E\",\n",
+    "    \"Laura Sánchez\": \"76941572-F\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ask user input DNI here ⬇️\n",
+    "\n",
+    "\n",
+    "# Check if the DNI is valid ⬇️\n",
+    "\n",
+    "\n",
+    "# Check if the DNI is in the black list ⬇️\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
