--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -581,11 +581,89 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loops"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The intercepted message\n",
+    "\n",
+    "You have intercepted a message from a secure system, but it appears to be encrypted using a simple substitution cipher. Each number in the message corresponds to the position of a letter in the alphabet (e.g., 1 represents 'a,' 2 represents 'b,' and so on). Your task is to decrypt the message and reveal its contents.\n",
+    "\n",
+    "- Create an empty string `decrypted_message` to store the decrypted message.\n",
+    "- Implement a for loop to iterate through each number in the encrypted_message. For each number, convert it back to the corresponding letter in the alphabet (e.g., '2' becomes 'b') in this case you suspect that 0 represent an space between words.\n",
+    "- Append the decrypted letter to the `decrypted_message` string.\n",
+    "- Continue this process until you have decrypted the entire message.\n",
+    "- Print the decrypted_message to reveal the intercepted message."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your base variables\n",
+    "encrypted_message = \"20 8 5 0 13 9 19 19 9 12 5 0 23 1 19 0 12 1 21 14 3 8 5 4 0 20 8 9 19 0 13 15 18 14 9 14 7 0 1 20 0 20 23 5 12 22 5 0 1 13\"\n",
+    "alphabet = \" abcdefghijklmnopqrstuvwxyz\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decrypt the message here ⬇️\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The tidy warehouse\n",
+    "\n",
+    "You are the new manager of an airplane warehouse and you need to implement an algorithm to order the airplanes in each unit. Fortunately, you know how to code in python and you think you can reprogram the bridge cranes to rearrange the airplanes in each unit so that they all face the same direction as the first plane on the left side of the unit.\n",
+    "\n",
+    "| Symbols | Meaning |\n",
+    "| --- | --- |\n",
+    "| \\| | Unit wall divider |\n",
+    "| - | Empty slot |\n",
+    "| > | airplane facing to the right |\n",
+    "| < | airplane facing to the left |\n",
+    "\n",
+    "Example:\n",
+    "- Untidy warehouse: `|->--<|<<>-->|`\n",
+    "- Tidy warehouse: `|->-->|<<<--<|`\n",
+    "\n",
+    "Make sure you have the same number of planes parked in the same slots after implementing the algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warehouse = \"|-->-><--|->---<--<<-|-<<<>--<<>-|><-<--<>>--<-|\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code your algorithm here ⬇️"
+   ]
   }
  ],
  "metadata": {
@@ -609,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
