Completed if else exercises

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -656,36 +656,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gL_1y42raWyg",
-        "outputId": "5b274d46-62ea-466a-ae27-47d73e0cde5c"
+        "outputId": "fb5fdd00-e340-4b4b-9324-ff7a92db9f57"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter DNI: 53812079-Z\n",
+            "Enter DNI: 98765432-Z\n",
+            "Enter First and Last Name: María López\n",
             "10\n",
             "-\n",
             "True\n",
             "Z\n",
             "True\n",
-            "53812079\n",
+            "98765432\n",
             "True\n",
             "DNI is a valid ID\n",
-            "{'Juan Varas': '65941354-A', 'María López': '98765432-Z', 'Carlos García': '56789012-M', 'Ana Rodríguez': '34567890-Y', 'Luis Urbión': '13508940-X', 'Sofía Fernández': '51849732-B', 'Pedro González': '60684930-C', 'Elena Torres': '91736482-D', 'Javier Bravo': '08566074-E', 'Laura Sánchez': '76941572-F'}\n",
-            "[CLEAR] The DNI is not on the list. No further action is required at this time.\n"
+            "[ALERT] The individual María López with DNI 98765432-Z is on the Blacklist database. Immediate action and reporting are required.\n"
           ]
         }
       ],
       "source": [
         "# Ask user input DNI here ⬇️\n",
         "dni = input(\"Enter DNI: \")\n",
+        "name = input(\"Enter First and Last Name: \")\n",
         "\n",
         "# Check if the DNI is valid ⬇️\n",
         "\n",
@@ -721,23 +722,13 @@
         "# Check if the DNI is in the black list ⬇️\n",
         "\n",
         "## Blacklist dictionary\n",
-        "black_list = {\n",
-        "    \"Juan Varas\": \"65941354-A\",\n",
-        "    \"María López\": \"98765432-Z\",\n",
-        "    \"Carlos García\": \"56789012-M\",\n",
-        "    \"Ana Rodríguez\": \"34567890-Y\",\n",
-        "    \"Luis Urbión\": \"13508940-X\",\n",
-        "    \"Sofía Fernández\": \"51849732-B\",\n",
-        "    \"Pedro González\": \"60684930-C\",\n",
-        "    \"Elena Torres\": \"91736482-D\",\n",
-        "    \"Javier Bravo\": \"08566074-E\",\n",
-        "    \"Laura Sánchez\": \"76941572-F\"\n",
-        "}\n",
-        "print(black_list)\n",
+        "black_list = { \"65941354-A\": \"Juan Varas\", \"98765432-Z\": \"María López\", \"56789012-M\": \"Carlos García\", \"34567890-Y\": \"Ana Rodríguez\", \"13508940-X\": \"Luis Urbión\", \"51849732-B\": \"Sofía Fernández\", \"60684930-C\": \"Pedro González\", \"91736482-D\": \"Elena Torres\", \"08566074-E\": \"Javier Bravo\", \"76941572-F\": \"Laura Sánchez\" }\n",
         "\n",
         "## Check DNI in blacklist\n",
-        "if dni in black_list: print (\"[ALERT] The individual {name} with {dni} is on the Blacklist database.  Immediate action and reporting are required.\")\n",
-        "else: print(\"[CLEAR] The DNI is not on the list. No further action is required at this time.\")\n",
+        "if dni in black_list:\n",
+        "  print(f\"[ALERT] The individual {name} with DNI {dni} is on the Blacklist database. Immediate action and reporting are required.\")\n",
+        "else:\n",
+        "  print(f\"[CLEAR] The DNI {dni} is not on the list. No further action is required at this time.\")\n",
         "\n",
         "\n"
       ]
