--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -656,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -769,18 +769,47 @@
       "source": [
         "# Your base variables\n",
         "encrypted_message = \"20 8 5 0 13 9 19 19 9 12 5 0 23 1 19 0 12 1 21 14 3 8 5 4 0 20 8 9 19 0 13 15 18 14 9 14 7 0 1 20 0 20 23 5 12 22 5 0 1 13\"\n",
-        "alphabet = \" abcdefghijklmnopqrstuvwxyz\""
+        "alphabet = \"abcdefghijklmnopqrstuvwxyz\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
-        "id": "lr5dFkQEaWyh"
+        "id": "lr5dFkQEaWyh",
+        "outputId": "d6313747-07f2-4763-ef61-684b1b6f5933",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['20', '8', '5', '0', '13', '9', '19', '19', '9', '12', '5', '0', '23', '1', '19', '0', '12', '1', '21', '14', '3', '8', '5', '4', '0', '20', '8', '9', '19', '0', '13', '15', '18', '14', '9', '14', '7', '0', '1', '20', '0', '20', '23', '5', '12', '22', '5', '0', '1', '13']\n",
+            "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Decrypt the message here ⬇️\n"
+        "# Decrypt the message here ⬇️\n",
+        "\n",
+        "## Declare decrypted message variable\n",
+        "decrypted_message = \"\"\n",
+        "\n",
+        "## Convert encrypted message string to list\n",
+        "print(encrypted_message.split())\n",
+        "\n",
+        "## Convert alphabet string to list\n",
+        "alphabet_lst = []\n",
+        "for letter in alphabet:\n",
+        "  alphabet_lst.append(letter)\n",
+        "\n",
+        "print(alphabet_lst)\n",
+        "\n",
+        "## For loop to iterate through numbers in encrypted message\n",
+        "\n"
       ]
     },
     {
