Exercises done until beginning of loops

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -774,13 +774,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 23,
       "metadata": {
         "id": "lr5dFkQEaWyh",
-        "outputId": "d6313747-07f2-4763-ef61-684b1b6f5933",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7bfaeba7-2441-44c1-f438-b3dc64e448c7"
       },
       "outputs": [
         {
@@ -788,7 +788,57 @@
           "name": "stdout",
           "text": [
             "['20', '8', '5', '0', '13', '9', '19', '19', '9', '12', '5', '0', '23', '1', '19', '0', '12', '1', '21', '14', '3', '8', '5', '4', '0', '20', '8', '9', '19', '0', '13', '15', '18', '14', '9', '14', '7', '0', '1', '20', '0', '20', '23', '5', '12', '22', '5', '0', '1', '13']\n",
-            "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
+            "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+            "20\n",
+            "8\n",
+            "5\n",
+            "0\n",
+            "13\n",
+            "9\n",
+            "19\n",
+            "19\n",
+            "9\n",
+            "12\n",
+            "5\n",
+            "0\n",
+            "23\n",
+            "1\n",
+            "19\n",
+            "0\n",
+            "12\n",
+            "1\n",
+            "21\n",
+            "14\n",
+            "3\n",
+            "8\n",
+            "5\n",
+            "4\n",
+            "0\n",
+            "20\n",
+            "8\n",
+            "9\n",
+            "19\n",
+            "0\n",
+            "13\n",
+            "15\n",
+            "18\n",
+            "14\n",
+            "9\n",
+            "14\n",
+            "7\n",
+            "0\n",
+            "1\n",
+            "20\n",
+            "0\n",
+            "20\n",
+            "23\n",
+            "5\n",
+            "12\n",
+            "22\n",
+            "5\n",
+            "0\n",
+            "1\n",
+            "13\n"
           ]
         }
       ],
@@ -799,17 +849,17 @@
         "decrypted_message = \"\"\n",
         "\n",
         "## Convert encrypted message string to list\n",
+        "encrypted_message = \"20 8 5 0 13 9 19 19 9 12 5 0 23 1 19 0 12 1 21 14 3 8 5 4 0 20 8 9 19 0 13 15 18 14 9 14 7 0 1 20 0 20 23 5 12 22 5 0 1 13\"\n",
         "print(encrypted_message.split())\n",
         "\n",
         "## Convert alphabet string to list\n",
-        "alphabet_lst = []\n",
-        "for letter in alphabet:\n",
-        "  alphabet_lst.append(letter)\n",
-        "\n",
-        "print(alphabet_lst)\n",
+        "alphabet = \"abcdefghijklmnopqrstuvwxyz\"\n",
+        "alphabet_letters = list(alphabet)\n",
+        "print(alphabet_letters)\n",
         "\n",
         "## For loop to iterate through numbers in encrypted message\n",
-        "\n"
+        "for number in encrypted_message.split():\n",
+        "  print(number)\n"
       ]
     },
     {
