--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -774,13 +774,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 33,
       "metadata": {
         "id": "lr5dFkQEaWyh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7bfaeba7-2441-44c1-f438-b3dc64e448c7"
+        "outputId": "223dc83b-2372-4d53-eb01-7457cfab9614"
       },
       "outputs": [
         {
@@ -854,8 +854,8 @@
         "\n",
         "## Convert alphabet string to list\n",
         "alphabet = \"abcdefghijklmnopqrstuvwxyz\"\n",
-        "alphabet_letters = list(alphabet)\n",
-        "print(alphabet_letters)\n",
+        "alphabet_letter = list(alphabet)\n",
+        "print(alphabet_letter)\n",
         "\n",
         "## For loop to iterate through numbers in encrypted message\n",
         "for number in encrypted_message.split():\n",
