Exercise done until beginning of loops

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -774,13 +774,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 49,
       "metadata": {
         "id": "lr5dFkQEaWyh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "223dc83b-2372-4d53-eb01-7457cfab9614"
+        "outputId": "b172a293-a751-4798-aa5c-33ac00ceb1aa"
       },
       "outputs": [
         {
@@ -789,56 +789,32 @@
           "text": [
             "['20', '8', '5', '0', '13', '9', '19', '19', '9', '12', '5', '0', '23', '1', '19', '0', '12', '1', '21', '14', '3', '8', '5', '4', '0', '20', '8', '9', '19', '0', '13', '15', '18', '14', '9', '14', '7', '0', '1', '20', '0', '20', '23', '5', '12', '22', '5', '0', '1', '13']\n",
             "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-            "20\n",
-            "8\n",
-            "5\n",
-            "0\n",
-            "13\n",
-            "9\n",
-            "19\n",
-            "19\n",
-            "9\n",
-            "12\n",
-            "5\n",
-            "0\n",
-            "23\n",
-            "1\n",
-            "19\n",
-            "0\n",
-            "12\n",
-            "1\n",
-            "21\n",
-            "14\n",
-            "3\n",
-            "8\n",
-            "5\n",
-            "4\n",
-            "0\n",
-            "20\n",
-            "8\n",
-            "9\n",
-            "19\n",
-            "0\n",
-            "13\n",
-            "15\n",
-            "18\n",
-            "14\n",
-            "9\n",
-            "14\n",
-            "7\n",
-            "0\n",
-            "1\n",
-            "20\n",
-            "0\n",
-            "20\n",
-            "23\n",
-            "5\n",
-            "12\n",
-            "22\n",
-            "5\n",
-            "0\n",
-            "1\n",
-            "13\n"
+            "1: a\n",
+            "2: b\n",
+            "3: c\n",
+            "4: d\n",
+            "5: e\n",
+            "6: f\n",
+            "7: g\n",
+            "8: h\n",
+            "9: i\n",
+            "10: j\n",
+            "11: k\n",
+            "12: l\n",
+            "13: m\n",
+            "14: n\n",
+            "15: o\n",
+            "16: p\n",
+            "17: q\n",
+            "18: r\n",
+            "19: s\n",
+            "20: t\n",
+            "21: u\n",
+            "22: v\n",
+            "23: w\n",
+            "24: x\n",
+            "25: y\n",
+            "26: z\n"
           ]
         }
       ],
@@ -858,8 +834,13 @@
         "print(alphabet_letter)\n",
         "\n",
         "## For loop to iterate through numbers in encrypted message\n",
-        "for number in encrypted_message.split():\n",
-        "  print(number)\n"
+        "for i in range(len(alphabet_letter)):\n",
+        "    letter = alphabet_letter[i]\n",
+        "    number = i + 1\n",
+        "    print(f\"{number}: {letter}\")\n",
+        "\n",
+        "## Append decrypted letters\n",
+        "\n"
       ]
     },
     {
