--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -551,18 +551,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "black_list = {\n",
-    "    \"Juan Varas\": \"65941354-A\",\n",
-    "    \"María López\": \"98765432-Z\",\n",
-    "    \"Carlos García\": \"56789012-M\",\n",
-    "    \"Ana Rodríguez\": \"34567890-Y\",\n",
-    "    \"Luis Urbión\": \"13508940-X\",\n",
-    "    \"Sofía Fernández\": \"51849732-B\",\n",
-    "    \"Pedro González\": \"60684930-C\",\n",
-    "    \"Elena Torres\": \"91736482-D\",\n",
-    "    \"Javier Bravo\": \"08566074-E\",\n",
-    "    \"Laura Sánchez\": \"76941572-F\"\n",
-    "}"
+    "black_list = { \"65941354-A\": \"Juan Varas\",\n",
+    "              \"98765432-Z\": \"María López\",\n",
+    "              \"56789012-M\": \"Carlos García\",\n",
+    "              \"34567890-Y\": \"Ana Rodríguez\",\n",
+    "              \"13508940-X\": \"Luis Urbión\",\n",
+    "              \"51849732-B\": \"Sofía Fernández\",\n",
+    "              \"60684930-C\": \"Pedro González\",\n",
+    "              \"91736482-D\": \"Elena Torres\",\n",
+    "              \"08566074-E\": \"Javier Bravo\",\n",
+    "              \"76941572-F\": \"Laura Sánchez\" }"
    ]
   },
   {
@@ -673,7 +671,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
@@ -688,6 +686,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "191f5b59da23d8f5597a02d0ad5b7396e6a208736fd38a86a9169861d6352415"
+   }
   }
  },
  "nbformat": 4,
