update: pyhton loop and data

--- a/unit-1/11_introduction_to_python.ipynb
+++ b/unit-1/11_introduction_to_python.ipynb
@@ -587,6 +587,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The corrupted text files\n",
+    "\n",
+    "As an anthropologist on the brink of publishing groundbreaking research, your computer system has fallen victim to a virus. The virus corrupted your research documents, replacing vital letters with symbols. To salvage your work, you must craft a Python script to reverse these symbol replacements.\n",
+    "\n",
+    "You have a text named \"corrupted_file\" containing all your research about black holes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrupted_file = \"\"\"\n",
+    "Bl%ck h/l¿#, ¿nigm%tic c/#mic /bj¿ct# b/(n f(/m th¿ g(%vit%ti/n%l c/ll%@#¿ /f m%##iv¿ #t%(#, h%v¿ c%@tiv%t¿d #ci¿nti#t# %nd th¿ @&blic %lik¿ f/( d¿c%d¿#. R¿c¿nt (¿#¿%(ch h%# #h¿d n¿* light /n th¿i( f/(m%ti/n, @(/@¿(ti¿#, %nd @(/f/&nd infl&¿nc¿ /n th¿ &niv¿(#¿. On¿ k¿y %dv%nc¿m¿nt i# th¿ &nd¿(#t%nding /f #&@¿(m%##iv¿ bl%ck h/l¿# %t g%l%ctic c¿nt¿(#, #&gg¿#ting th¿i( (/l¿ in g%l%xy ¿v/l&ti/n.\n",
+    "\n",
+    "Evid¿nc¿ f/( th¿ ¿xi#t¿nc¿ /f int¿(m¿di%t¿-m%## bl%ck h/l¿# h%# %l#/ #&(f%c¿d, ch%ll¿nging /&( @(¿c/nc¿@ti/n# %b/&t th¿i( f/(m%ti/n m¿ch%ni#m#. T¿chn/l/gic%l %dv%nc¿m¿nt#, #&ch %# g(%vit%ti/n%l *%v¿ d¿t¿ct/(#, h%v¿ &#h¿(¿d in % n¿* ¿(% /f bl%ck h/l¿ ¿x@l/(%ti/n, ¿n%bling th¿ d¿t¿cti/n /f m¿(g¿(# %nd th¿ #t&dy /f th¿i( @(/@¿(ti¿#.\n",
+    "\n",
+    "Th¿#¿ finding# h%v¿ f%(-(¿%ching im@lic%ti/n#, f(/m th¿ v%lid%ti/n /f Ein#t¿in'# th¿/(y /f g¿n¿(%l (¿l%tivity t/ in#ight# int/ th¿ n%t&(¿ /f d%(k m%tt¿(. Bl%ck h/l¿# c/ntin&¿ t/ b¿ % (ich #/&(c¿ /f di#c/v¿(y, /ff¿(ing % glim@#¿ int/ th¿ f&nd%m¿nt%l */(king# /f /&( &niv¿(#¿ %nd it# hi#t/(y. F&t&(¿ (¿#¿%(ch @(/mi#¿# t/ &n(%v¿l m/(¿ #¿c(¿t# /f th¿#¿ c/#mic ¿nigm%#.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After closer examination, you've identified the symbols that correspond to specific letters in your corrupted research. To recover the file, you've painstakingly created a Python dictionary mapping symbols to their respective letters. This dictionary will be a valuable tool in restoring your critical research data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bugs = {'%': 'a',\n",
+    "        '¿': 'e',\n",
+    "        '#': 's',\n",
+    "        '*': 'w',\n",
+    "        '(': 'r',\n",
+    "        '/': 'o',\n",
+    "        '&': 'u',\n",
+    "        '@': 'p'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your task is to create a Python script that fixes the corrupted file and saves the corrected version in a new variable named \"fixed_file.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the fixed_file variable\n",
+    "\n",
+    "# Loop through the corrupted file\n",
+    "\n",
+    "# Print the fixed file\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
